20180926		4.8.1
	- Fix bug when writing with multiple SCSI devices on the chain

20180416		4.8
	- Fix Unit Serial Number inquiry page to use return configured serial number
	- Apple mode pages now only sent when in Apple mode.
	- Added quirks selection to scsi2sd-util. Apple users should manually fix
	their settings to use the Apple mode.
	- Added specific support for XEBEC controllers.
	- Added a speed selection to scsi2sd-util. Users with older SASI or SCSI1
	controllers should select the lower speed for stability.
	- Support for v5.1 hardware boards.

20170501		4.7.1
	- Fix scsi2sd-util size and sector-size inputs
	- Fix crash when configured scsi disk starting sector is less than
	SD card size
	- Update to PSoC Creator 4.0

20170312		4.7
	- Fix bug in SCSI Inquiry command for SCSI2 hosts
	- Added OMTI host quirks mode
	- Fix for booting from early Mac Plus ROMS
	- Performance fix when SCSI2 mode is enabled. Some users may need
	to disable SCSI2 mode if it was incorrectly enabled previously.
	- Added support for configurable mode pages
	- Fix for exporting selectionDelay/startupDelay parameters to XML
	via scsi2sd-util
	- scsi2sd-util is now built with libudev1 on Linux, as all distros have
	moved to this version. Users on older Linux distributions will need to
	compile from source.

20160111		4.6
	- Fixed bug when using sector size that isn't a multiple of 4
	(eg. 522 bytes)
	- Fixed a bug that caused hanging or scsi phase errors on
	high speed scsi hosts.
	- Fixed a hang when processing a SCSI RESET in a data phase.
	- scsi2sd-util: Fixed USB connection problems under Windows 10.
	- Added option to treat luns as separate devices
	- Improved boot up time.


20151105		4.5
	- Fix bug in SCSI MODE SENSE that returned the wrong mode type
		- Fixes CDROM emulation
	- Added selection delay parameter. This should be set to 1ms for older
	SCSI1 hardware, or 0ms for SCSI2 and Mac Plus.
	- Upgraded to wxWidgets 3.0.2